# 42_CPP_Module00_to_04

./: .gitignore  Dockerfile  Makefile  README.md
Module00/: CMakeLists.txt  Makefile  backup--.txt
Module00/ex00/: CMakeLists.txt  Magephone.hpp  Makefile  Megaphone.cpp
Module00/ex00/headers/: Megaphone.hpp
Module00/ex00/src/: Megaphone.cpp  main.cpp
Module00/ex01/: CMakeLists.txt  Makefile
Module00/ex01/headers/: Contact.hpp  PhoneBook.hpp  Printers.hpp
Module00/ex01/src/: Contact.cpp  PhoneBook.cpp  Printers.cpp  main.cpp
Module00/ex02/: CMakeLists.txt  Makefile
Module00/ex02/headers/: Account.hpp
Module00/ex02/src/: Account.cpp
Module00/tests/: CMakeLists.txt  TestModule00Ex00.cpp  run_test.sh
Module01/: CMakeLists.txt  Makefile
Module01/ex00/: Makefile
Module01/ex00/headers/: Zombie.hpp
Module01/ex00/src/: Zombie.cpp  main.cpp  zombie.cpp
Module01/ex01/: Makefile
Module01/ex01/headers/: Zombie.hpp  ZombieHorde.hpp  zombieHorde.hpp
Module01/ex01/src/: Zombie.cpp  ZombieHorde.cpp  main.cpp  zombie.cpp  zombieHorde.cpp
Module01/ex02/: Makefile
Module01/ex02/src/: main.cpp
Module01/ex03/: Makefile
Module01/ex03/headers/: HumanA.hpp  HumanB.hpp  Weapon.hpp
Module01/ex03/src/: HumanA.cpp  HumanB.cpp  Weapon.cpp  main.cpp
Module01/ex04/: Makefile  MussumIpsum.txt  MussumIpsum.txt.replace
Module01/ex04/headers/: Database.hpp  DatabaseManager.hpp  ReplaceManager.hpp  ReplaceThisWithThat.hpp
Module01/ex04/src/: Database.cpp  DatabaseManager.cpp  ReplaceManager.cpp  ReplaceThisWithThat.cpp  main.cpp
Module01/ex05/: Makefile
Module01/ex05/headers/: Harl.hpp
Module01/ex05/src/: Harl.cpp  main.cpp
Module01/ex06/: Makefile
Module01/ex06/src/: Harl.cpp  main.cpp
Module02/: Makefile
Module02/ex00/: Makefile
Module02/ex00/headers/: Fixed.hpp
Module02/ex00/src/: Fixed.cpp  main.cpp
Module02/ex01/: Makefile
Module02/ex01/headers/: Fixed.hpp
Module02/ex01/src/: Fixed.cpp  main.cpp
Module02/ex02/: Makefile
Module02/ex02/headers/: Fixed.hpp
Module02/ex02/src/: Fixed.cpp  main.cpp
Module03/: CMakeLists.txt  Makefile
Module03/ex00/: Makefile
Module03/ex00/headers/: ClapTrap.hpp
Module03/ex00/src/: ClapTrap.cpp  Utils.cpp  main.cpp
Module03/ex01/: Makefile
Module03/ex01/headers/: ClapTrap.hpp  ScavTrap.hpp  Utils.hpp
Module03/ex01/src/: ClapTrap.cpp  ScavTrap.cpp  Utils.cpp  main.cpp
Module03/ex02/: Makefile
Module03/ex02/headers/: ClapTrap.hpp  FragTrap.hpp  ScavTrap.hpp  Utils.hpp
Module03/ex02/src/: ClapTrap.cpp  FragTrap.cpp  ScavTrap.cpp  Utils.cpp  main.cpp
Module03/ex03/: Makefile
Module03/ex03/headers/: ClapTrap.hpp  DiamondTrap.hpp  FragTrap.hpp  ScavTrap.hpp
Module03/ex03/src/: ClapTrap.cpp  DiamondTrap.cpp  FragTrap.cpp  ScavTrap.cpp  main.cpp
Module04/: CMakeLists.txt  Makefile
Module04/ex00/: Makefile
Module04/ex00/headers/: Animal.hpp  Cat.hpp  Dog.hpp  Utils.hpp  WrongAnimal.hpp  WrongCat.hpp
Module04/ex00/src/: Animal.cpp  Cat.cpp  Dog.cpp  Utils.cpp  WrongAnimal.cpp  WrongCat.cpp  main.cpp
Module04/ex01/: Makefile
Module04/ex01/headers/: Animal.hpp  Brain.hpp  Cat.hpp  Dog.hpp
Module04/ex01/src/: Animal.cpp  Brain.cpp  Cat.cpp  Dog.cpp  Utils.cpp  main.cpp
Module04/ex02/: Makefile
Module04/ex02/headers/: AAnimal.hpp  Brain.hpp  Cat.hpp  Dog.hpp  Utils.hpp
Module04/ex02/src/: AAnimal.cpp  Brain.cpp  Cat.cpp  Dog.cpp  Utils.cpp  (+1 more)
Module05/: CMakeLists.txt
Module05/ex00/: CMakeLists.txt  Makefile
Module05/ex01/: Makefile.mk
Module05/ex02/: Makefile
Module05/ex03/: CMakeLists.txt  Makefile
Module05/tests/: CMakeLists.txt  TestModule05Ex00.cpp  TestModule05Ex01.cpp
(+32 files in other folders)
